force-app/main/default/objects/Checklist__c/fields/BackgroundChecks__c.field-meta.xml
<CustomField>
    <fullName>BackgroundChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Checks</label>
    <type>Checkbox</type>
</CustomField>