force-app/main/default/objects/Checklist__c/fields/Bank_1__c.field-meta.xml
<CustomField>
    <fullName>Bank_1__c</fullName>
    <label>Bank 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>