force-app/main/default/objects/Checklist__c/fields/Bank_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_1_Date__c</fullName>
    <label>Bank 1 Date</label>
    <type>Date</type>
</CustomField>