force-app/main/default/objects/Checklist__c/fields/Bank_2__c.field-meta.xml
<CustomField>
    <fullName>Bank_2__c</fullName>
    <label>Bank 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>