force-app/main/default/objects/Checklist__c/fields/Bank_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Date__c</fullName>
    <label>Bank 2 Date</label>
    <type>Date</type>
</CustomField>