force-app/main/default/objects/Checklist__c/fields/Bank_3__c.field-meta.xml
<CustomField>
    <fullName>Bank_3__c</fullName>
    <label>Bank 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>