force-app/main/default/objects/Checklist__c/fields/Bank_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_3_Date__c</fullName>
    <label>Bank 3 Date</label>
    <type>Date</type>
</CustomField>