force-app/main/default/objects/Checklist__c/fields/Bank_Records_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Bank_Records_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Records Analysis</label>
    <type>Checkbox</type>
</CustomField>