force-app/main/default/objects/Checklist__c/fields/Bank_Records_Subpoena__c.field-meta.xml
<CustomField>
    <fullName>Bank_Records_Subpoena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Records Subpoena?</label>
    <type>Checkbox</type>
</CustomField>