force-app/main/default/objects/Checklist__c/fields/Contact_Respondent_re_settlement__c.field-meta.xml
<CustomField>
    <fullName>Contact_Respondent_re_settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Respondent re settlement</label>
    <type>Checkbox</type>
</CustomField>