force-app/main/default/objects/Checklist__c/fields/Cursory_Review_of_Bank_Records__c.field-meta.xml
<CustomField>
    <fullName>Cursory_Review_of_Bank_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cursory Review of Bank Records</label>
    <type>Checkbox</type>
</CustomField>