force-app/main/default/objects/Checklist__c/fields/Date_of_addtl_Attorney_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_addtl_Attorney_Meeting__c</fullName>
    <label>Date of addtl Attorney Meeting</label>
    <type>Date</type>
</CustomField>