force-app/main/default/objects/Checklist__c/fields/Date_of_Attorney_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Attorney_Meeting__c</fullName>
    <label>Date of Attorney Meeting</label>
    <type>Date</type>
</CustomField>