force-app/main/default/objects/Checklist__c/fields/Date_of_Complainant_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Complainant_Interview__c</fullName>
    <label>Date of Complainant Interview</label>
    <type>Date</type>
</CustomField>