force-app/main/default/objects/Checklist__c/fields/Date_of_Investigation_Report_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Investigation_Report_Review__c</fullName>
    <label>Date of Investigation Report Review</label>
    <type>Date</type>
</CustomField>