force-app/main/default/objects/Checklist__c/fields/Date_of_Respondent_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Respondent_Interview__c</fullName>
    <label>Date of Respondent Interview</label>
    <type>Date</type>
</CustomField>