force-app/main/default/objects/Checklist__c/fields/Date_of_Witness_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Witness_Interviews__c</fullName>
    <label>Date of Witness Interviews</label>
    <type>Date</type>
</CustomField>