force-app/main/default/objects/Checklist__c/recordTypes/Attorney_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Attorney_Checklist</fullName>
    <active>true</active>
    <label>Attorney Checklist</label>
</RecordType>