force-app/main/default/objects/Checklist__c/recordTypes/Investigation_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Investigation_Checklist</fullName>
    <active>true</active>
    <label>Investigation Checklist</label>
</RecordType>